<resources>
    <string name="app_name">AirportZo User</string>
    <string name="app">AirportZo</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="English">English</string>
    <string name="Tamil">தமிழ்</string>
    <string name="Hindi">हिन्दी</string>
    <string name="you_can_change_the_preferred_language_anytime_within_the_app">You can change the preferred language anytime within the app</string>
    <string name="choose_your_preferred_currency">Choose your preferred currency</string>
    <string name="back">Back</string>
    <string name="you_can_change_the_preferred_currency_anytime_within_the_app">You can change the preferred currency anytime with in the app</string>
    <string name="inr">INR (₹)</string>
    <string name="usd">USD ($)</string>
    <string name="make_your_journey_as_enjoyable_as_the_destination">Make Your Journey As Enjoyable As The Destination</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="my_booking">My Bookings</string>
    <string name="notification">Notification</string>
    <string name="lets_book_your_service">Let\'s book your service</string>
    <string name="what_s_your_travel_plan">What\'s your travel plan?</string>
    <string name="direct_flight">Direct Flight</string>
    <string name="i_have_transits">I have transits</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depart_on">Depart on</string>
    <string name="depart_flight_number">Depart Flight Number</string>
    <string name="search_service">Search Service</string>
    <string name="let_s_book_a_service">Let\'s book a service</string>
    <string name="offers_only_for_you">Offers only for you</string>
    <string name="top_services_from_the_elite">Top services from the Elite</string>
    <string name="services_we_offer">Services we offer</string>
    <string name="transit_journey">Transit Journey</string>
    <string name="journey_1">Journey 1</string>
    <string name="journey_2">Journey 2</string>
    <string name="transits">I have transits</string>
    <string name="direct">Direct Flight</string>
    <string name="journey_3">Journey 3</string>
    <string name="add_transit">Add transit</string>
    <string name="remove_transit">Remove Transit</string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="View">-----</string>
    <string name="Services">  Services Added</string>
    <string name="Service">  Service </string>
    <string name="passenger">Passengers</string>
    <string name="total_services">Total service</string>
    <string name="you_will_earn">You will earn</string>
    <string name="connect_to_wi_fi">Try Again</string>
    <string name="wifi">Connect to Wi-Fi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_starting">Service Starting</string>
    <string name="book_service">Book Service</string>
    <string name="who_can_available_this_service">Who can available this service</string>
    <string name="where_the_service_is_given">Where the service is given</string>
    <string name="service_included">Service Included</string>
    <string name="our_elite_partners">Our elite Partners</string>
    <string name="choose_service">Choose Service</string>
    <string name="locations">Locations</string>
    <string name="airport">Airport - </string>
    <string name="services_available_in">Services available in</string>
    <string name="view_package">VIEW PACKAGE</string>
    <string name="package_starts_at">Package Starts at</string>
    <string name="meet_and_greet">Meet and Greet</string>
    <string name="journey_4">Journey 4</string>
    <string name="adults">Adult</string>
    <string name="_12_years_and_above">12 years and above</string>
    <string name="child">Child</string>
    <string name="_2_11_years">2-11 years</string>
    <string name="when_do_you_need_the_service">When do you need the service?</string>
    <string name="the_displayed_date_and_time_are_on_the_local_timezone_of_the_airport_location">The displayed date and time are on the local timezone of the Airport location.</string>
    <string name="service_date">Flight Date</string>
    <string name="service_avail_time">Service Avail Time</string>
    <string name="packages">Packages</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="and">and</string>
    <string name="terms_and_conditions">Terms And Conditions,</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="_0">0</string>
    <string name="view_more">View more</string>
    <string name="choose_package">Choose Package</string>
    <string name="remove_package">Remove Package</string>
    <string name="features">Features :</string>
    <string name="services_included">Services Included :</string>
    <string name="earn">Earn</string>
    <string name="per_adult">per adult</string>
    <string name="per_child">per child</string>
    <string name="otp_sent_to">OTP sent to </string>
    <string name="sec">s</string>
    <string name="resendcode">Resend Code</string>
    <string name="didnot_receive">Didn\'t receive the code?</string>
    <string name="lounge_photos">Lounge Photos</string>
    <string name="amenities">Amenities</string>
    <string name="add_new_passenger">Add new passenger</string>
    <string name="please_enter_the_new_passenger_details">Please enter the new passenger details</string>
    <string name="contact_passenger_name">Contact Passenger Name</string>
    <string name="contact_email_address">Contact Email Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="pick_from_saved_passenger_list">Pick from saved passenger list</string>
    <string name="reschedule_policy">Reschedule Policy</string>
    <string name="summary">Summary</string>
    <string name="your_services_for">Your Services for</string>
    <string name="with_this_order">with this order</string>
    <string name="redeem">Redeem</string>
    <string name="you_can_save">You can save</string>
    <string name="with_the_order_by">with the order by</string>
    <string name="redeems">redemming</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="cancel_redeem">Cancel Redeem</string>
    <string name="price_details">Price Details</string>
    <string name="service_cost">Service Cost</string>
    <string name="gst">GST</string>
    <string name="total_amount">Total Amount</string>
    <string name="check_your_total_amount_in_other_currencies">Check your total amount in other currencies</string>
    <string name="check_now">Check Now</string>
    <string name="checkout">Checkout</string>
    <string name="miles">miles</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="passenger_details">Passenger details</string>
    <string name="other_details">Other details</string>
    <string name="contact_passenger_details">Contact Passenger Details</string>
    <string name="all_calls_and_message_will_be_delivered_to_this_passenger">All calls and message will be delivered to this passenger</string>
    <string name="add_contact_passenger">Add contact passenger</string>
    <string name="other_passenger_details">Other Passenger Details *</string>
    <string name="enter_the_details_of_other_passengers">Enter the details of other passengers</string>
    <string name="add_passengers">Add passengers</string>
    <string name="greeter_family_contact_details">Greeter / Family Contact Details</string>
    <string name="help_us_reach_your_dear_ones_and_keep_them_informed">Help us reach your dear ones and keep them informed</string>
    <string name="greeter_family_contact_should_not_be_in_your_passenger_list">Alternate contact should not be in your passenger list</string>
    <string name="add_greeter_family_contact">Add greeter / family contact</string>
    <string name="upload_e_ticket">Upload E-Ticket</string>
    <string name="upload_your_flight_ticket_in_pdf_format">Upload your flight ticket in PDF format</string>
    <string name="pan_details">PAN Details</string>
    <string name="optional">(Optional)</string>
    <string name="add_pan_number_to_claim_tax">Add PAN number to claim tax</string>
    <string name="gstin_for_this_booking">GSTIN for this booking</string>
    <string name="add_gst_number_to_avail_its_benefits">Add GST number to avail its benefits</string>
    <string name="meet_and_greet_placard_details">Placard Message (Optional)</string>
    <string name="welcome_your_guests_in_the_way_you_want">Enter the message to display in Placard</string>
    <string name="eg_hello_zach_welcome_to_india_we_wish_you_have_a_great_experience_and_memories_during_your_stayHere">Eg: Hello Zach! Welcome to India.</string>
    <string name="flower_and_bouquet_details">Flower and Bouquet details</string>
    <string name="send_a_personalized_note_for_your_loved_ones">Send a personalized note for your loved ones</string>
    <string name="eg_i_am_fortunate_to_have_you_in_my_life_and_i_wish_you_have_a_great_day">Eg. I am fortunate to have you in my life and I wish you have a great day!</string>
    <string name="booking_deatils">Booking Details</string>
    <string name="booking_id">Booking ID</string>
    <string name="journey_type">Journey Type</string>
    <string name="passengers">Passengers</string>
    <string name="completed">Completed</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="service_booked">Service Booked</string>
    <string name="contact_number">Contact Number</string>
    <string name="flight_details">Flight Details</string>
    <string name="e_ticket">E-Ticket</string>
    <string name="gstin_details">GSTIN Details</string>
    <string name="company_name">Company Name</string>
    <string name="rewards">Rewards</string>
    <string name="you_have_earned">You have earned</string>
    <string name="with_the_order">with the order</string>
    <string name="order_id">Order ID:</string>
    <string name="rate_us">Rate us</string>
    <string name="let_us_know_how_we_are_doing">Let us know how we are doing !</string>
    <string name="review">Review</string>
    <string name="your_message">Your Message here....</string>
    <string name="submit">Submit</string>
    <string name="notes">Notes</string>
    <string name="description">Description</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="reason">Reason</string>
    <string name="of">of</string>
    <string name="airportzo_ltd">AirportZo Ltd</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="earned">earned</string>
    <string name="personal_info">Personal Info</string>
    <string name="update_profile_save_gst_number_and_save_names">Update profile, Save GST number and save names</string>
    <string name="referrals">Referrals</string>
    <string name="invite_friends_get_rewards">Invite friends, get rewards</string>
    <string name="language">Language</string>
    <string name="change_the_language_you_use_the_airportzo_app_in">Change the language you use the AirportZo app in</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="please_enter_your_note_here">Please enter your note here</string>
    <string name="update">Update</string>
    <string name="change_language">Change Language</string>
</resources>