<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/homemenu"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cartmenu"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bookingmenu"
        android:icon="@drawable/booking"
        android:title="@string/my_booking"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
<!--    <item-->
<!--        android:id="@+id/notificationmenu"-->
<!--        android:icon="@drawable/notification"-->
<!--        android:title="@string/notification"-->
<!--        android:enabled="true"-->
<!--        app:showAsAction="ifRoom"/>-->

</menu>