<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fullcurve"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/rubikmedium"
            android:text="@string/edit_notes"
            android:textColor="@color/textcolor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/greyText"
            android:layout_marginStart="20dp"
            android:text="@string/please_enter_your_note_here"
            app:layout_constraintTop_toBottomOf="@+id/editComment"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:textSize="14sp"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/greyText"
            app:layout_constraintTop_toBottomOf="@+id/editDes"
            android:background="@drawable/otp_curve"
            android:layout_marginStart="20dp"
            android:hint="@string/your_message"
            android:fontFamily="@font/rubikregular"
            android:padding="10dp"
            android:layout_marginEnd="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/rubikmedium"
            android:letterSpacing="0"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescriptionEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>